# sphinx-revealjs

./: .gitignore  .gitmodules  .mise.toml  justfile  pyproject.toml
.github/workflows/: publish.yml
example/: conf.py  index.rst
src/sei/sphinxext/revealjs/: __init__.py  builder.py  overridenodes.py
src/sei/sphinxext/revealjs/themes/revealjs/: layout.html
src/sphinx_revealjs/: __init__.py  builder.py  overridenodes.py
src/sphinx_revealjs_slides/: __init__.py  _utils.py  builder.py  constants.py
src/sphinx_revealjs_slides/directives/: __init__.py  interslide.py  newslide.py
src/sphinx_revealjs_slides/ext/: graphviz.py
src/sphinx_revealjs_slides/revealjs_plugins/: __init__.py  constants.py
src/sphinx_revealjs_slides/themes/revealjs/: slides-layout.html  slides.html  theme.conf
