[tool.poetry]
name = "sphinx-revealjs"
version = "0.2.0"
description = ""
authors = ["Ashley Trinh <ashley@hackbrightacademy.com>"]
readme = "README.md"
packages = [{ include = "sphinx_revealjs", from = "src" }]
include = ["lib/reveal.js/dist", "lib/reveal.js/plugin"]

[tool.poetry.dependencies]
python = "^3.9"
sphinx = "^6.1.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
black = "^23.1.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
